force-app/main/default/objects/Boni_Target__mdt/fields/Data_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_User_Id__c</fullName>
    <description>데이터 소유 SF User Id (005...)</description>
    <label>Data User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>