force-app/main/default/objects/Boni_Target__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>false 면 대상에서 제외</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>