force-app/main/default/objects/Boni_Target__mdt/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <description>수신 Slack user ID (U...)</description>
    <label>Slack User Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>